[gd_scene load_steps=31 format=2]

[ext_resource path="res://Art/Sprites/Ogre-Sheet.png" type="Texture" id=1]
[ext_resource path="res://RectTelegraph.tscn" type="PackedScene" id=2]
[ext_resource path="res://Ogre.gd" type="Script" id=3]
[ext_resource path="res://Art/Sprites/Ogre-Sheet2.png" type="Texture" id=4]
[ext_resource path="res://HealthBar.tscn" type="PackedScene" id=5]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 8.5784, 5.95354 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 36, 36 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 4 )
region = Rect2( 108, 72, 36, 36 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 4 )
region = Rect2( 144, 72, 36, 36 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 4 )
region = Rect2( 0, 108, 36, 36 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 4 )
region = Rect2( 36, 108, 36, 36 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 4 )
region = Rect2( 72, 108, 36, 36 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 1 )
region = Rect2( 252, 0, 36, 36 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 1 )
region = Rect2( 288, 0, 36, 36 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 1 )
region = Rect2( 288, 0, 36, 36 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 1 )
region = Rect2( 324, 0, 36, 36 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 1 )
region = Rect2( 360, 0, 36, 36 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 1 )
region = Rect2( 396, 0, 36, 36 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 1 )
region = Rect2( 432, 0, 36, 36 )

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 1 )
region = Rect2( 468, 0, 36, 36 )

[sub_resource type="AtlasTexture" id=16]
atlas = ExtResource( 1 )
region = Rect2( 504, 0, 36, 36 )

[sub_resource type="AtlasTexture" id=17]
atlas = ExtResource( 1 )
region = Rect2( 540, 0, 36, 36 )

[sub_resource type="AtlasTexture" id=18]
atlas = ExtResource( 1 )
region = Rect2( 36, 0, 36, 36 )

[sub_resource type="AtlasTexture" id=19]
atlas = ExtResource( 1 )
region = Rect2( 72, 0, 36, 36 )

[sub_resource type="AtlasTexture" id=20]
atlas = ExtResource( 1 )
region = Rect2( 108, 0, 36, 36 )

[sub_resource type="AtlasTexture" id=21]
atlas = ExtResource( 1 )
region = Rect2( 144, 0, 36, 36 )

[sub_resource type="AtlasTexture" id=22]
atlas = ExtResource( 1 )
region = Rect2( 180, 0, 36, 36 )

[sub_resource type="AtlasTexture" id=23]
atlas = ExtResource( 1 )
region = Rect2( 216, 0, 36, 36 )

[sub_resource type="SpriteFrames" id=24]
animations = [ {
"frames": [ SubResource( 2 ) ],
"loop": true,
"name": "Idle",
"speed": 5.0
}, {
"frames": [ SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ) ],
"loop": false,
"name": "Throw",
"speed": 10.0
}, {
"frames": [ SubResource( 8 ), SubResource( 9 ) ],
"loop": true,
"name": "Hold",
"speed": 5.0
}, {
"frames": [ SubResource( 10 ), SubResource( 11 ), SubResource( 12 ), SubResource( 13 ), SubResource( 14 ), SubResource( 15 ), SubResource( 16 ), SubResource( 17 ) ],
"loop": true,
"name": "Attack",
"speed": 10.0
}, {
"frames": [ SubResource( 18 ), SubResource( 19 ), SubResource( 20 ), SubResource( 21 ) ],
"loop": true,
"name": "Walk",
"speed": 5.0
}, {
"frames": [ SubResource( 22 ), SubResource( 23 ) ],
"loop": false,
"name": "Wind",
"speed": 5.0
} ]

[sub_resource type="CircleShape2D" id=25]
radius = 100.785

[node name="Ogre" type="KinematicBody2D"]
scale = Vector2( 5, 5 )
collision_layer = 2
script = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -0.153465, 3.37629 )
shape = SubResource( 1 )

[node name="SlamAttackTimer" type="Timer" parent="."]
wait_time = 2.0
autostart = true

[node name="RectTelegraph" parent="." instance=ExtResource( 2 )]
scale = Vector2( 0.1, 0.1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 0, -9 )
frames = SubResource( 24 )
animation = "Hold"
frame = 1
playing = true

[node name="Aggro" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Aggro"]
visible = false
position = Vector2( 0.132678, 0 )
shape = SubResource( 25 )

[node name="RockSpawnPosition" type="Node2D" parent="."]
position = Vector2( 13.98, -17.987 )

[node name="HealthBar" parent="." instance=ExtResource( 5 )]
margin_left = -10.2021
margin_top = -30.69
margin_right = 29.7979
margin_bottom = 9.31002
[connection signal="timeout" from="SlamAttackTimer" to="." method="_on_SlamAttackTimer_timeout"]
[connection signal="body_entered" from="Aggro" to="." method="_on_Aggro_body_entered"]
